--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 # This file contains the names of the main authors of this program
 Liul Abera<https://github.com/Liul-Abera/>
+Ananiya Legesse	<https://github.com/AnaniyaLegesse>
